# hazpost-backend-v2

./: .eslintrc.json  .gitignore  .replit  auditor_hazpost.py  auditoria_hazpost.txt  auditoria_hazpost.xlsx  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  requirements.txt  skills-lock.json
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--ACTUALIZA-O-CREA-EL-SKILL-content-scheduler-validator-_1776785795842.txt  Pasted--DOCTYPE-html-html-lang-es-CO-dir-ltr-head-meta-charset_1775186570305.txt  Pasted--Explicaci-n-para-Replit-cambios-necesarios-en-producci_1775926060083.txt  Pasted--PROBLEMA-ACTUAL-EN-HAZPOST-para-generar-sus-propios-po_1776596464013.txt  Pasted--PROBLEMA-DETECTADO-EN-GENERACI-N-DE-POSTS-especialment_1776600901402.txt  Pasted--PROBLEMA-DETECTADO-EN-SUBINDUSTRIAS-Actualmente-el-sis_1776598834328.txt  Pasted--PROBLEMA-DETECTADO-EN-VALIDACI-N-DE-SUBINDUSTRIAS-CORR_1776603247682.txt  Pasted--Problema-Solicitud-Meter-un-cuadro-de-texto-en-la-cola_1775969908441.txt  Pasted--REGLA-FUNDAMENTAL-Este-comportamiento-NO-es-opcional-n_1775732828593.txt  Pasted--REGLA-GENERAL-DE-HAZPOST-CREAR-SKILL-BENEFICIOS-UNIVER_1776180590649.txt  Pasted--Skill-actualizado-Massive-Post-Generator-v2-0-markdown_1776562923744.txt  Pasted--empresa-Eco-Col-SAS-sitio-web-www-eco-col-com-instagra_1775319565980.txt  Pasted--id-11-nombre-Bodegas-y-Centros-Log-sticos-palabras-cla_1775348002711.txt  Pasted--wp-html-DOCTYPE-html-html-lang-es-CO-head-meta-charset_1775456269297.txt  (+46 more)
hazpost-backend/: .env.example  .gitignore  README.md  app.py  (+2 more)
(+332 files in other folders)
