[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler==3.10.4",
    "beautifulsoup4==4.12.3",
    "flask==3.0.3",
    "flask-limiter==3.8.0",
    "gunicorn==22.0.0",
    "lxml>=6.0.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "python-dotenv==1.0.1",
    "python-levenshtein==0.25.1",
    "requests==2.32.3",
    "thefuzz==0.22.1",
]
